--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div id='map'></div>
 <script>
     L.mapbox.accessToken = 'pk.eyJ1Ijoia2V2cmVpbiIsImEiOiJfQ0RHX2hZIn0.hI4lNnug0mHlUQ16xX3fIg';
-    var map = L.mapbox.map('map', 'kevrein.jjb5lcik')
+    var map = L.mapbox.map('map', 'kevrein.nb62mx6r')
 </script>
 </body>
 </html>
