--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <div id='map'></div>
 <script>
     L.mapbox.accessToken = 'pk.eyJ1Ijoia2V2cmVpbiIsImEiOiJfQ0RHX2hZIn0.hI4lNnug0mHlUQ16xX3fIg';
-    var map = L.mapbox.map('map', 'kevrein.4scjhajc')
+    var southWest = L.latLng(40.712, -74.227),
+        northEast = L.latLng(40.774, -74.125),
+        bounds = L.latLngBounds(southWest, northEast);
+    var map = L.mapbox.map('map', 'kevrein.1b9ln7uw',{
+        maxBounds: bounds})
 </script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
