--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     var map = L.mapbox.map('map', 'kevrein.1b9ln7uw',{
         maxBounds: bounds,
         maxZoom: 7,
-        minZoom: 3
+        minZoom: 3,
+        detectRetina: True,
         })
 </script>
 <script>
