--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         maxBounds: bounds,
         maxZoom: 7,
         minZoom: 3,
-        detectRetina: True,
+        detectRetina: true
         })
 </script>
 <script>
