--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         maxBounds: bounds,
         maxZoom: 7,
         minZoom: 3,
-        detectRetina: true
+        detectRetina: true,
+        tileSize: 128
         })
 </script>
 <script>
