--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
     var map = L.mapbox.map('map', 'kevrein.1b9ln7uw',{
         maxBounds: bounds,
         maxZoom: 7,
-        minZoom: 3,
-        detectRetina: true,
-        tileSize: 128
+        minZoom: 3
         })
 </script>
 <script>
