--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         northEast = L.latLng(75, 179),
         bounds = L.latLngBounds(southWest, northEast);
     var map = L.mapbox.map('map', 'kevrein.1b9ln7uw',{
+        tileLayer: {
+            detectRetina: true
+        }
         maxBounds: bounds,
         maxZoom: 7,
         minZoom: 3
