--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         maxBounds: bounds,
         maxZoom: 7,
         minZoom: 3
+        tileLayer: {
+            detectRetina: true
+    }
         })
 </script>
 <script>
