--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
         maxBounds: bounds,
         maxZoom: 7,
         minZoom: 3
-        tileLayer: {
+        tileLayer: 
             detectRetina: true
-    }
         })
 </script>
 <script>
