--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         maxBounds: bounds,
         maxZoom: 7,
         minZoom: 3
-        tileLayer: 
+        tileLayer: {
             detectRetina: true
-        })
+        }})
 </script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
