--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     var map = L.mapbox.map('map', 'kevrein.1b9ln7uw',{
         tileLayer: {
             detectRetina: true
+            maxBounds: bounds,
+            maxZoom: 7,
+            minZoom: 3
         }
     })
 </script>
