--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         bounds = L.latLngBounds(southWest, northEast);
     var map = L.mapbox.map('map', 'kevrein.1b9ln7uw',{
         tileLayer: {
-            detectRetina: true
+            detectRetina: true,
             maxBounds: bounds,
             maxZoom: 7,
             minZoom: 3
