--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     </style>
 </head>
 <body>
+<a href="http://kevish.github.io" style="
+    font-size: 17px;
+    font-family: Verdana,sans-serif;
+    text-decoration: none;
+    color: #3887be;
+">Other Projects</a>
+<a href="http://kevish.github.io/AllStreets/" style="
+    font-size: 17px;
+    font-family: Verdana,sans-serif;
+    float: Right;
+    text-decoration: none;
+    color: #3887be;
+">All U.S. Streets</a>
 <div id='map'></div>
 <script>
     L.mapbox.accessToken = 'pk.eyJ1Ijoia2V2cmVpbiIsImEiOiJfQ0RHX2hZIn0.hI4lNnug0mHlUQ16xX3fIg';
