--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     </style>
 </head>
 <body>
-<a href="http://kevish.github.io" style="
+<a href="https://www.etsy.com/listing/268070105/" style="
     font-size: 17px;
     font-family: Verdana,sans-serif;
     text-decoration: none;
     color: #3887be;
-">Other Projects</a>
+">Poster Prints</a>
 <a href="http://kevish.github.io/AllStreets/" style="
     font-size: 17px;
     font-family: Verdana,sans-serif;
