--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     float: Right;
     text-decoration: none;
     color: #3887be;
-">All U.S. Streets</a>
+">All U.S. Streets Web Map</a>
 <div id='map'></div>
 <script>
     L.mapbox.accessToken = 'pk.eyJ1Ijoia2V2cmVpbiIsImEiOiJfQ0RHX2hZIn0.hI4lNnug0mHlUQ16xX3fIg';
