--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src='https://api.tiles.mapbox.com/mapbox.js/v2.2.3/mapbox.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v2.2.3/mapbox.css' rel='stylesheet' />
     <style>
-        body { margin:0; padding:0; }
+        body { margin:0; padding:0; background-color: #272727;}
         #map { position:absolute; top:5%; bottom:0; width:100%; }
     </style>
 </head>
