--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:image:height" content="500" />
     <style>
         body { margin:0; padding:0; background-color: #272727;}
-        #map { position:absolute; top:5%; bottom:0; width:100%; }
+        #map { position:absolute; top:25px; bottom:0; width:100%; }
     </style>
 </head>
 <body>
