--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             maxBounds: bounds,
             maxZoom: 6,
             minZoom: 2,
+            zoom: 3,
         tileLayer: {
             detectRetina: true
         }
