--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
             maxBounds: bounds,
             maxZoom: 6,
             minZoom: 2,
-            zoom: 3,
         tileLayer: {
             detectRetina: true
         }
-    })
+    }).setView([0,0], 3);
 </script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
