--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     font-family: Verdana,sans-serif;
     text-decoration: none;
     color: #3887be;
-">Poster Prints</a>
+">Prints Available Here</a>
 <a href="http://kevish.github.io/AllStreets/" style="
     font-size: 18px;
     font-family: Verdana,sans-serif;
