--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     font-size: 18px;
     font-family: Verdana,sans-serif;
     text-decoration: none;
-    color: #3887be;
+    color: rgb(128, 203, 255);
 ">Prints Available Here</a>
 <a href="http://kevish.github.io/AllStreets/" style="
     font-size: 18px;
     font-family: Verdana,sans-serif;
     float: Right;
     text-decoration: none;
-    color: #3887be;
+    color: rgb(128, 203, 255);
 ">All U.S. Streets Web Map</a>
 <div id='map'></div>
 <script>
