--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-<a href="https://www.etsy.com/listing/268070105/" style="
+<a href="https://www.etsy.com/shop/PrintedMaps?section_id=18671789&ref=shopsection_leftnav_2" style="
     font-size: 18px;
     font-family: Verdana,sans-serif;
     text-decoration: none;
