--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     var southWest = L.latLng(-57, -179),
         northEast = L.latLng(75, 179),
         bounds = L.latLngBounds(southWest, northEast);
-    var map = L.mapbox.map('map', 'kevrein.1b9ln7uw',{
+    var map = L.mapbox.map('map', 'kevrein.9ir0f5a6',{
             maxBounds: bounds,
             maxZoom: 6,
             minZoom: 2,
