--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-<a href="https://www.etsy.com/shop/PrintedMaps?section_id=18671789&ref=shopsection_leftnav_2" style="
+<a href="https://www.amazon.com/World-Flight-Patterns-26-38/dp/B01GSHUCTC" style="
     font-size: 18px;
     font-family: Verdana,sans-serif;
     text-decoration: none;
