--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name='viewport' content='initial-scale=2,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox.js/v2.2.3/mapbox.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v2.2.3/mapbox.css' rel='stylesheet' />
-    <meta property="og:image" content="http://i.imgur.com/I9szqqJ.png" />
-    <meta property="og:image:width" content="429" />
-    <meta property="og:image:height" content="500" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Worldwide Airline Routes and Flight Patterns Posters" />
+    <meta property="og:description" content="Poster of data that visualizes over 60,000 flight routes and flight patterns around the world" />
+    <meta property="og:image" content="http://i.imgur.com/xdlNeit.png" />
+    <meta property="og:image:width" content="500" />
+    <meta property="og:image:height" content="294" />
     <style>
         body { margin:0; padding:0; background-color: #272727;}
         #map { position:absolute; top:25px; bottom:0; width:100%; }
