--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     float: Right;
     text-decoration: none;
     color: rgb(128, 203, 255);
-">All U.S. Streets Web Map</a>
+">All U.S. Streets Map</a>
 <div id='map'></div>
 <script>
     L.mapbox.accessToken = 'pk.eyJ1Ijoia2V2cmVpbiIsImEiOiJfQ0RHX2hZIn0.hI4lNnug0mHlUQ16xX3fIg';
