--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     text-decoration: none;
     color: rgb(128, 203, 255);
 ">Prints Available Here</a>
-<a href="http://kevish.github.io/AllStreets/" style="
+<a href="http://kevish.github.io" style="
     font-size: 18px;
     font-family: Verdana,sans-serif;
     float: Right;
