--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
             detectRetina: true
         }
     }).setView([0,0], 3);
+    var layers = {
+      Streets: L.mapbox.tileLayer('kevrein.8vcy04ux'),
+      Contours: L.mapbox.tileLayer('kevrein.d96jh384'),
+      Hydrography: L.mapbox.tileLayer('kevrein.4acek9ya')
+  };
+  layers.Streets.addTo(map);
+  L.control.layers(layers).addTo(map);
 </script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
