--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
         }
     }).setView([0,0], 3);
     var layers = {
-      Streets: L.mapbox.tileLayer('kevrein.8vcy04ux'),
-      Contours: L.mapbox.tileLayer('kevrein.d96jh384'),
-      Hydrography: L.mapbox.tileLayer('kevrein.4acek9ya')
+      No Country Borders: L.mapbox.tileLayer('kevrein.9ir0f5a6'),
+      Country Borders: L.mapbox.tileLayer('kevrein.0dwpzctb'),
   };
   layers.Streets.addTo(map);
   L.control.layers(layers).addTo(map);
