--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
     }).setView([0,0], 3);
     var layers = {
-      No Country Borders: L.mapbox.tileLayer('kevrein.9ir0f5a6'),
+      No Country Borders: L.mapbox.tileLayer('kevrein.ayboz6yo'),
       Country Borders: L.mapbox.tileLayer('kevrein.0dwpzctb'),
   };
   layers.Streets.addTo(map);
