--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     }).setView([0,0], 3);
     var layers = {
       No Country Borders: L.mapbox.tileLayer('kevrein.ayboz6yo'),
-      Country Borders: L.mapbox.tileLayer('kevrein.0dwpzctb'),
+      Country Borders: L.mapbox.tileLayer('kevrein.0dwpzctb')
   };
   layers.Streets.addTo(map);
   L.control.layers(layers).addTo(map);
