--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         }
     }).setView([0,0], 3);
     var layers = {
-      No Country Borders: L.mapbox.tileLayer('kevrein.ayboz6yo'),
-      Country Borders: L.mapbox.tileLayer('kevrein.0dwpzctb')
+      NoBorders: L.mapbox.tileLayer('kevrein.ayboz6yo'),
+      CountryBorders: L.mapbox.tileLayer('kevrein.0dwpzctb')
   };
   layers.Streets.addTo(map);
   L.control.layers(layers).addTo(map);
