--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       NoBorders: L.mapbox.tileLayer('kevrein.ayboz6yo'),
       CountryBorders: L.mapbox.tileLayer('kevrein.0dwpzctb')
   };
-  layers.Streets.addTo(map);
+  layers.NoBorders.addTo(map);
   L.control.layers(layers).addTo(map);
 </script>
 <script>
