--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
         }
     }).setView([0,0], 3);
     var layers = {
-      NoBorders: L.mapbox.tileLayer('kevrein.ayboz6yo'),
-      CountryBorders: L.mapbox.tileLayer('kevrein.0dwpzctb')
+      No Borders: L.mapbox.tileLayer('kevrein.ayboz6yo'),
+      Borders: L.mapbox.tileLayer('kevrein.0dwpzctb')
   };
-  layers.NoBorders.addTo(map);
+  layers.Borders.addTo(map);
   L.control.layers(layers).addTo(map);
 </script>
 <script>
