--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       BordersOff: L.mapbox.tileLayer('kevrein.ayboz6yo'),
       BordersOn: L.mapbox.tileLayer('kevrein.0dwpzctb')
   };
-  layers.Borders.addTo(map);
+  layers.BordersOn.addTo(map);
   L.control.layers(layers).addTo(map);
 </script>
 <script>
