--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     var southWest = L.latLng(-57, -179),
         northEast = L.latLng(75, 179),
         bounds = L.latLngBounds(southWest, northEast);
-    var map = L.mapbox.map('map', 'kevrein.9ir0f5a6',{
+    var map = L.mapbox.map('map', 'kevrein.ayboz6yo',{
             maxBounds: bounds,
             maxZoom: 5,
             minZoom: 2,
