--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             maxBounds: bounds,
             maxZoom: 5,
             minZoom: 2,
+        tileLayer: {
             detectRetina: true
+        }
     }).setView([0,0], 3);
 </script>
 <script>
