--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         }
     }).setView([0,0], 3);
     var layers = {
-      BordersOff: L.mapbox.tileLayer('kevrein.ayboz6yo'),
-      BordersOn: L.mapbox.tileLayer('kevrein.0dwpzctb')
+      BordersOff: L.mapbox.tileLayer('kevrein.ayboz6yo', { detectRetina: true }),
+      BordersOn: L.mapbox.tileLayer('kevrein.0dwpzctb'), { detectRetina: true })
   };
   layers.BordersOn.addTo(map);
   L.control.layers(layers).addTo(map);
