--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       BordersOff: L.mapbox.tileLayer('kevrein.ayboz6yo', { detectRetina: true }),
       BordersOn: L.mapbox.tileLayer('kevrein.0dwpzctb'), { detectRetina: true })
   };
-  layers.BordersOn.addTo(map);
+  layers.BordersOff.addTo(map);
   L.control.layers(layers).addTo(map);
 </script>
 <script>
