--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <html>
 <head>
+    <script>
+    /**
+    * Function that tracks a click on an outbound link in Analytics.
+    * This function takes a valid URL string as an argument, and uses that URL string
+    * as the event label. Setting the transport method to 'beacon' lets the hit be sent
+    * using 'navigator.sendBeacon' in browser that support it.
+    */
+        var trackOutboundLink = function(url) {
+     ga('send', 'event', 'outbound', 'click', url, {
+         'transport': 'beacon',
+         'hitCallback': function(){document.location = url;}
+     });
+    }
+</script>
     <meta charset=utf-8 />
     <title>World-Wide Flight Patterns</title>
     <meta name='viewport' content='initial-scale=2,maximum-scale=1,user-scalable=no' />
@@ -17,7 +31,7 @@
     </style>
 </head>
 <body>
-<a href="https://www.amazon.com/World-Flight-Patterns-26-38/dp/B01GSHUCTC" style="
+<a href="https://www.amazon.com/World-Flight-Patterns-26-38/dp/B01GSHUCTC" onclick="trackOutboundLink('https://www.amazon.com/World-Flight-Patterns-26-38/dp/B01GSHUCTC'); return false;" style="
     font-size: 18px;
     font-family: Verdana,sans-serif;
     text-decoration: none;
