--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
     </style>
 </head>
 <body>
+    <!-- Google Tag Manager -->
+    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-WHR68P"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-WHR68P');</script>
+    <!-- End Google Tag Manager -->
 <a href="https://www.amazon.com/World-Flight-Patterns-26-38/dp/B01GSHUCTC" onclick="trackOutboundLink('https://www.amazon.com/World-Flight-Patterns-26-38/dp/B01GSHUCTC'); return false;" style="
     font-size: 18px;
     font-family: Verdana,sans-serif;
