--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             transition: background .25s ease-in-out;
             -moz-transition: background .25s ease-in-out;
             -webkit-transition: background .25s ease-in-out;
+            background-color: #585858;
         }
         a.hovclass:hover {
             background-color: #797b80;
