--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         }
     }).setView([0,0], 3);
     var layers = {
-      BordersOff: L.mapbox.tileLayer('kevrein.ayboz6yo', { detectRetina: true }),
+      BordersOff: L.mapbox.tileLayer('aaronlidman.b02452c3', { detectRetina: true }),
       BordersOn: L.mapbox.tileLayer('kevrein.0dwpzctb', { detectRetina: true })
   };
   layers.BordersOff.addTo(map);
