--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
         bounds = L.latLngBounds(southWest, northEast);
     var map = L.mapbox.map('map', null,{
             maxBounds: bounds,
-            maxZoom: 5,
-            minZoom: 2,
+            maxZoom: 24,
+            minZoom: 12,
         tileLayer: {
             detectRetina: true
         }
-    }).setView([0,0], 3);
+    }).setView([37.772292151125505, -122.40674436092377], 17);
     var layers = {
       BordersOff: L.mapbox.tileLayer('aaronlidman.b02452c3', { detectRetina: true }),
       BordersOn: L.mapbox.tileLayer('kevrein.0dwpzctb', { detectRetina: true })
