--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div id='map'></div>
 <script>
 L.mapbox.accessToken = 'pk.eyJ1Ijoia2V2aW5yZWluIiwiYSI6ImFlY0l3UVEifQ.Ui-o72tW-jsWmfbnXM-wLw';
-var map = L.mapbox.map('map', 'aaronlidman.b02452c3'')
+var map = L.mapbox.map('map', 'aaronlidman.b02452c3')
     .setView([37.772292151125505, -122.40674436092377], 17);
 </script>
 </body>
